--- a/style.css
+++ b/style.css
@@ -53,3 +53,21 @@ body{
     width: 14rem;
     
 }
+
+@media screen and (max-width: 600px) {
+    h1{
+        font-size: medium;    }
+    .answer-box{
+        width: 100%;
+    }
+    .option-box{
+        position:relative;
+        width: 60%;
+        margin-top: 4rem;
+        
+    }
+    .btn{
+        width: 6rem;
+        height: 4rem;
+    }
+}
