--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     column-gap: 1.5rem;
     margin-top: 5.5rem;
     position: relative;
+    bottom: 20px;
     
 
 }
@@ -63,6 +64,7 @@ body{
     .option-box{
         position:relative;
         width: 60%;
+        bottom: 20px;
         margin-top: 4rem;
         
     }
